--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   height: 80vh;
   width: 60vh;
   background-color: #343d46;
-  border: 4px solid black;
+  border: 4px solid #fff;
   border-radius: 10px;
 
   display: flex;
@@ -27,8 +27,16 @@ body {
   height: 10%;
   width: 80%;
   background-color: #65737e;
-  border: 4px solid black;
+  border: 4px solid #fff;
   border-radius: 10px;
+}
+
+#screen-text {
+  margin: 0 2.5% 0 0;
+  padding: 0;
+  text-align: right;
+  font-size: 300%;
+  font-weight: 700;
 }
 
 #numpad {
@@ -36,7 +44,7 @@ body {
   height: 80%;
   width: 80%;
   background-color: #65737e;
-  border: 4px solid black;
+  border: 4px solid #fff;
   border-radius: 10px;
 
   display: flex;
@@ -58,14 +66,18 @@ body {
   
 }
 
-button {
+.numpad-btn {
   height: 80%;
   width: 20%;
   text-align: center;
   font-size: 300%;
   font-weight: 700;
   background-color: #a7adba;
-  border: 4px solid black;
+  border: 4px solid #fff;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.operator-active {
+  color: white;
 }
